infra/kube-dns-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: kube-dns
  namespace: kube-system
  labels: { k8s-app: kube-dns }
spec:
  clusterIP: CLUSTER_DNS_IP
  selector: { k8s-app: kube-dns }
  ports:
  - { name: dns,     port: 53, protocol: UDP, targetPort: 53 }
  - { name: dns-tcp, port: 53, protocol: TCP, targetPort: 53 }
